--- a/css/pagina1.css
+++ b/css/pagina1.css
@@ -1,68 +1,72 @@
 /****************/
-/* HEADER */
+/* Artikel 1 */
 /****************/
 
-section:nth-child(2) h1 {
-   height: auto;
+section:first-of-type {
+  padding-top: 4em ;
 
-   max-width: 100%;
-   padding: 0 3em;
+  display: flex;
+  flex-direction: column;
 
-   font-weight: lighter;
-   font-weight: 500;
-   font-size: 2em;
+  height: 26em;
+  
+  width: 100%;
+
+  text-align: center;
+  overflow: hidden;
+
+  
+}
+
+section:first-of-type h1 {
+  height: auto;
+
+  max-width: 100%;
+  padding: 0 3em;
+
+  font-weight: lighter;
+  font-weight: 500;
+  font-size: 2em;
 
 }
 
-section:nth-child(2) {
-   padding-top: 4em ;
 
-   display: flex;
-   flex-direction: column;
-   gap: 1;
+section:first-of-type h2 {
+  padding: 0 3.4em;
 
-   width: 100%;
-
-   text-align: center;
-   overflow: hidden;
-
-   
-}
-
-section:nth-child(2) h2 {
-   padding: 0 3.4em;
-
-   font-weight: lighter;
-   font-size: 1.2em;
-   font-weight: 300;
+  font-weight: lighter;
+  font-size: 1.2em;
+  font-weight: 300;
 
 }
 
-section:nth-child(2) p {
-   opacity: 40%;
-   padding-top: 1em;
-   
-   font-weight: lighter;
-   font-size: 1em;
-   font-weight: 300;
+section:first-of-type p {
+  opacity: 40%;
+  padding-top: 1em;
+  
+  font-weight: lighter;
+  font-size: 1em;
+  font-weight: 300;
 }
 
-section:nth-child(2) a {
-   font-weight: lighter;
-   font-size: 1em;
-   font-weight: 300;
+section:first-of-type a {
+  font-weight: lighter;
+  font-size: 1em;
+  font-weight: 300;
 }
 
-section:nth-child(2) img {
-   z-index: -1;
-   width: 100%;
-   height: auto;
-   min-width: 50em;
+section:first-of-type img {
+  z-index: -1;
+  width: 100%;
+  height: auto;
+  min-width: 50em;
 
-   object-fit: cover;
+  object-fit: cover;
 
-   transform:translateX(-10em)
+  transform:translateX(-10em)
 }
+
+
 
 
 
@@ -73,119 +77,124 @@ section:nth-child(2) img {
 
 
 /****************/
-/* TWEEDE ARTIKEL MET FILMPJE */
+/* FILMPJE */
 /****************/
 
 article:first-of-type {
-   display: flex;
-   flex-direction: column;
-   gap: 1em;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
 
-   height: 53em;
+  height: 53em;
 
-   text-align: center;
-   font-size: .69em;
-   color: white;
-   font-weight: 100;
+  text-align: center;
+  font-size: .69em;
+  color: white;
+  font-weight: 100;
 }
 
 article:first-of-type img  {
-   position: relative;
-   top: 59%;
-   left: 38%;
+  position: relative;
+  top: 59%;
+  left: 38%;
 
-   max-width: max-content;
+  max-width: max-content;
 
-   width: 10em;
+  width: 10em;
 
-   justify-content: center;
+  justify-content: center;
 
 }
 
 article:first-of-type  h2{
-   margin-top: 17.5em;
-   padding-top: 17em;
-   padding: 0 5em;
+  margin-top: 17.5em;
+  padding-top: 17em;
+  padding: 0 5em;
 
-   font-weight: 300;
-   font-size: 1.8em;
-   color: white;
+  font-weight: 300;
+  font-size: 1.8em;
+  color: white;
 }
 
 article:first-of-type div  {
-   display: flex;
-   flex-direction: row;
-   gap: 1.2em;
+  display: flex;
+  flex-direction: row;
+  gap: 1.2em;
 
-   justify-content: center;
+  justify-content: center;
 
-   font-size: 1.6em;
+  font-size: 1.6em;
 }
 
 article:first-of-type a  {
-   padding: .7em 1.8em;
+  padding: .6em 1.8em;
 
-   justify-content: center;
-
-
-   border-style: none;
-   border-top-left-radius: 1.7em; /* Left half-circle */
-   border-bottom-left-radius: 1.7em;
-   border-top-right-radius: 1.7em; /* Right half-circle */
-   border-bottom-right-radius: 1.7em;
-   background-color: white;
-   
-   font-weight: 200;
-   color: black;
+  justify-content: center;
 
 
+  border-style: none;
+  border-top-left-radius: 1.7em; /* Left half-circle */
+  border-bottom-left-radius: 1.7em;
+  border-top-right-radius: 1.7em; /* Right half-circle */
+  border-bottom-right-radius: 1.7em;
+  background-color: white;
+  
+  font-weight: 200;
+  color: black;
 }
 
 
 article:first-of-type a:hover  {
-   opacity: 90;
+  opacity: 90;
 
-   color: darkgrey;
+  color: darkgrey;
 }
 
 article:first-of-type button  {
-   position: relative;
-   bottom: 1em;
-   left: 86%;
+  position: relative;
+  bottom: 1em;
+  left: 86%;
 
-   width: 2em;
-   height: 2em;
+  width: 1.3em;
+  height: 1.3em;
 
-   background-color: grey;
-   border-radius: 100%;
-   border-style: none;
+  background-color: grey;
+  border-radius: 100%;
+  border-style: none;
 
-   font-size: 2em;
+  font-size: 2em;
 
-   transform: translate(-20%, -10%);
+  transform: translate(-20%, -10%);
 }
 
 article:first-of-type video  {
-   z-index: -1;
-   object-fit: cover;
-   position: absolute;
+  z-index: -1;
+  object-fit: cover;
+  position: absolute;
 
-   width: 100%;
-   height: 100%;
-   max-height: 52em;
+  width: 100%;
+  height: 100%;
+  max-height: 52em;
 }
 
 @media (prefers-prefers-reduced-motion) {
-   article:first-of-type video  {
-      z-index: -1;
-      object-fit: cover;
-      position: absolute;
-   
-      width: 100%;
-      height: 100%;
-      max-height: 52em;
-   }
+  article:first-of-type video  {
+     z-index: -1;
+     object-fit: cover;
+     position: absolute;
+  
+     width: 100%;
+     height: 100%;
+     max-height: 52em;
+  }
 }
+
+
+
+
+
+
+
 
 
 
@@ -195,301 +204,217 @@ article:first-of-type video  {
 /****************/
 /* MEERDERE ARTIKELEN */
 /****************/
-article:nth-child(4)  {
-   position:static;
-
-   width: 100%;
-
-   display: flex;
-   flex-direction: column;
-   gap: 1;
-
-   overflow: hidden;
-
-   text-align: center;
-   color: black;
+ul:nth-child(5) li {
+  height: 25em;
+  background-position: -9em;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size:cover;
 }
 
-article:nth-child(4) ul {
-   z-index: -1;
-   width: 100%;
-   height: 37em;
-
-   background-position: -8em;
-   background-repeat: no-repeat;
-   background-position: center;
+ul:nth-child(5) li h3 {
+  padding-top: 1em;
+  font-size: 2em;
+  font-weight: 500;
 }
 
+ul:nth-child(5) li a {
+  position: relative;
+  top: 1em;
 
-article:nth-child(4) div {
-   z-index: -1;
-   position: absolute;
-   object-fit: cover;
-   width: 100%;
-
-}
-
-/*Div als placeholder*/
-article:nth-child(4) li div {
-   width: 100%;
-
-   display: flex;
-   flex-direction: column;
-   gap: 1;
-
-   text-align: center;
-}
-
-article:nth-child(4) li div h3 {
-   padding-top: 1em;
-   font-size: 2em;
-   font-weight: 500;
-}
-
-article:nth-child(4) div a {
-   font-size: 1em;
-   font-weight: 300;
-   display: flex;
-   flex-direction: column;
-   gap: 1;
-}
-
-article:nth-child(4) div img {
-   display: none;
-
+  padding: 1em;
+  font-size: 1em;
+  font-weight: 300;
 }
 
 
-/* Achtergrond foto's (FUCK NON CSS BACKGROUND IMAGE */
-article:nth-child(4) ul:nth-child(1) {
-   background-image: url(../foto/Home/promo_iphone_tradein__bugw15ka691e_large.jpg);
-
+/* Fotos voor achtergrond of specefieke vorm*/
+ul:nth-child(5) li:nth-child(1) {
+  background-image: url(../foto/Home/promo_iphone15_announce__fmxxi8r9fkuy_small_2x.jpg);
 }
 
-article:nth-child(4) ul:nth-child(2) {
-   color: white;
-   background-image: url(../foto/Home/hero_iphone15pro__i70z9oz3hj2i_largetall.jpg);
+ul:nth-child(5) li:nth-child(2) {
+  background-image: url(../foto/Home/hero_iphone15pro__i70z9oz3hj2i_large_2x.jpg);
 }
 
-article:nth-child(4) ul:nth-child(3) {
-   color: white;
-   background-image: url(../foto/Home/hero_apple_watch_series_9_order__d0fi9mb84dci_largetall.jpg);
+ul:nth-child(5) li:nth-child(2) {
+  color: white;
 }
 
-article:nth-child(4) ul:nth-child(4) {
-   background-image: url(../foto/Home/hero_iphone15_announce__uuemlcwczn6u_largetall.jpg);
+ul:nth-child(5) li:nth-child(3) {
+  background-image: url(../foto/Home/hero_apple_watch_series_9_order__d0fi9mb84dci_largetall.jpg);
 }
 
+ul:nth-child(5) li:nth-child(3) {
+  color: white;
+}
+
+ul:nth-child(5) li:nth-child(4) {
+  background-image: url(../foto/Home/promo_iphone_tradein__bugw15ka691e_small_2x.jpg);
+}
+
+ul:nth-child(5) li:nth-child(5) {
+  background-image: url(../foto/Home/promo_iphone15_announce__fmxxi8r9fkuy_small_2x.jpg);
+}
+
+ul:nth-child(5) li:nth-child(5) {
+  background-image: url(../foto/Home/promo_airpods_pro_order__d8xv36p4uwae_large.jpg);
+}
+
+ul:nth-child(5) li:nth-child(5) {
+  color: white;
+}
+
+/******************************/
+/* DE CAROCARROUSEL CONTAINER */
+/******************************/
+
+.caroCarrousel ul:nth-child(1) {
+  margin-top: -0.5em;
+
+  list-style: none;
+  display: flex;
+  gap: 1em;
+
+  height: 30em;
+  width: 100%;
+
+  overflow: hidden;
+  scroll-snap-type: inline mandatory;
+  scroll-behavior: smooth;
+  overflow-y: hidden;
+  color: white;
+}  
 
 
+.caroCarrousel ul:nth-child(1) h3 {
+  padding-top: 23em;
+  font-size: .9em;
+}
 
+.caroCarrousel ul:nth-child(1) p {
+  font-size: .9em;
+  font-weight: 100;
+  padding: 0 1em;
+}
 
+.caroCarrousel ul:nth-child(1) a {
+  position: relative;
+  top: 1em;
+  padding: .8em 2em;
 
+  justify-content: center;
 
+  border-style: none;
+  border-top-left-radius: 1.7em; /* Left half-circle */
+  border-bottom-left-radius: 1.7em;
+  border-top-right-radius: 1.7em; /* Right half-circle */
+  border-bottom-right-radius: 1.7em;
+  background-color: white;
 
+  font-size: .8em;
+  font-weight: 700;
+  color: black;
 
+  cursor: pointer;
+}
 
+.caroCarrousel ul:nth-child(1) a:hover {
+  color: cadetblue;
+}
 
+.caroCarrousel ul:nth-child(1) li {
+  flex-basis: 50%;
+  flex-shrink: 0;
+  scroll-snap-align:center;
 
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
 
+.caroCarrousel ul:nth-child(1) li:nth-child(1){
+  background-image: url(../foto/Home/1.jpg);
+}
 
+.caroCarrousel ul:nth-child(1) li:nth-child(2){
+  background-image: url(../foto/Home/2.jpg);
+}
 
+.caroCarrousel ul:nth-child(1) li:nth-child(3){
+  background-image: url(../foto/Home/3.jpg);
+}
+
+.caroCarrousel ul:nth-child(1) li:nth-child(4){
+  background-image: url(../foto/Home/4.jpg);
+}
+
+.caroCarrousel ul:nth-child(1) li:nth-child(5){
+  background-image: url(../foto/Home/6.jpg);
+}
+
+.caroCarrousel ul:nth-child(1) li:nth-child(6){
+  background-image: url(../foto/Home/5.jpg);
+}
+
+.caroCarrousel ul:nth-child(1) li:nth-child(7){
+  background-image: url(../foto/Home/8.jpg);
+}
+
+.caroCarrousel ul:nth-child(1) li:nth-child(8){
+  background-image: url(../foto/Home/9.jpg);
+}
+
+.caroCarrousel ul:nth-child(1) li:nth-child(9){
+  background-image: url(../foto/Home/10.jpg);
+}
 
 
 
 /****************/
-/* FILMS APPLE + */
+/* DE BOLLETJES */
 /****************/
- 
- /******************************/
- /* DE CAROCARROUSEL CONTAINER */
- /******************************/
- 
- .caroCarrousel {
-     /* basis waarden die door de hele carrousel gebruikt worden */
-     /* kun je zelf aanpassen */
-     --caroCarrouselMainColor:#333;
-   --caroCarrouselAccentColor:#1b75b3;
-     --caroCarrouselShadeColor:#ddd9;
-   --caroCarrouselInverseColor:#e48a4c;
-   
-   --caroCarrouselAutoScrollInterval:4000;
- 
-   position: relative;
-     outline:none;
- }
- 
- /* dark mode */
- @media (prefers-color-scheme: dark) {
-   .caroCarrousel {
-     --caroCarrouselMainColor:#ccc;
-     --caroCarrouselShadeColor:#4449;
-   }
- }
- 
- 
- /************************************/
- /* de carrousel elementen container */
- .caroCarrousel > ul {
-   margin: 0; padding: 0;
-   height: 36em;
-   list-style: none;
-     display: flex;
-     gap: 2em;
-     
-     /* handmatig scrollen is mogelijk */
-     overflow: hidden;
-     
-     /* snappen als er gescrolled wordt - andere helft bij li */
-   scroll-snap-type: inline mandatory;
-   
-   /* smooth als met js gescrolled wordt */
-     scroll-behavior: smooth;
-     overflow-y: hidden;
-   
-   /* scrollbar zoveel mogelijk verbergen */
-   -webkit-overflow-scrolling: touch; /* voor iOS*/
-   -ms-overflow-style: none; /* voor IE */
-     scrollbar-width: none; /* voor firefox */
- }
- 
- .caroCarrousel > ul::-webkit-scrollbar {
-   /* scrollbar zoveel mogelijk verbergen */
-   display: none; /* voor chrome, safari en edge*/
- }
- 
- 
- /**************************/
- /* de carrousel elementen */
- .caroCarrousel > ul li {
-   flex-basis: 50%;
-   flex-shrink: 0;
-   /* snappen als er gescrolled wordt - andere helft bij ul */
-     scroll-snap-align:center;
- }
- 
- 
- /**********************************/
- /* de carrousel elementen content */
- 
- /* de stijlen voor jouw content hier */
- .caroCarrousel > ul li > img {
-   display: block;
-   width: 110%;
-   object-fit: cover;
+.caroCarrousel ul:nth-child(2) {
+margin-top: -0.5em;
+list-style: none;
 
+height: 3.2em;
+
+display: flex;
+
+justify-content: center;
+gap:.1em;
 }
- 
-
-   /**********************************/
- /* de carrousel elementen content */
-   /**********************************/
-
- .caroCarrousel ul li div {
-   position: relative;
-   bottom: 13em;
-   left: 1em;
-   
-   padding:  2em;
-
-   text-align: center;
-   color: white;
- }
-
- .caroCarrousel ul li div h3 {
-   font-size: 1.4em;
- }
 
 
-.caroCarrousel ul li div button  { 
-   padding: 1em 1em;
- background-color: white;
- border-top-left-radius: 1.4em; /* Left half-circle */
- border-bottom-left-radius: 1.4em;
- border-top-right-radius: 1.4em; /* Right half-circle */
- border-bottom-right-radius: 1.4em;
- border: none;
+/* een bolletje container */
+.caroCarrousel  ul:nth-child(2) li {
+  flex-basis: 1em; 
 }
- 
 
 
+/* de bolletjes */
+.caroCarrousel ul:nth-child(2) a {
+  position: relative;
+  top: 1em;
+  padding: .001em .6em;
+  margin: .4em;
 
+  background-color: dimgrey;
 
+  border-top-left-radius: 1.7em; /* Left half-circle */
+  border-bottom-left-radius: 1.7em;
+  border-top-right-radius: 1.7em; /* Right half-circle */
+  border-bottom-right-radius: 1.7em;
+}
 
+/* de bolletjes */
+.caroCarrousel ul:nth-child(2) a:hover {
+  background-color: gray;
+}
+  
 
-
-
-
- 
- /****************/
- /* DE BOLLETJES */
- /****************/
- 
- /* de bolletjes container */
- .caroCarrousel div nav ul {
-   position: absolute;
-     left: 3em; right: 2em;
-     bottom: 0;
-     margin: 0;
-   padding: 0 0 .5em;
-   list-style: none;
-     
-     display: flex;
-
-
-
-
- /* 	flex-wrap:wrap; */
-   justify-content: center;
-   gap:  .6em;
- }
-
-
-
- 
- /* een bolletje container */
- .caroCarrousel > div nav li {
-     flex-basis: 1.2em;
-     aspect-ratio: 1/1;
- }
-
-
-
- 
- /* de bolletjes */
- .caroCarrousel > div nav a {
-   display: block;
-   width: 50%;
-   height:50%;
-   
-   text-decoration: none;
-     color: var(--caroCarrouselMainColor);
-   background-color: var(--caroCarrouselShadeColor);
-     border-radius: 50%;
-   outline: none;
-     box-shadow: inset 0 0 0 1px currentColor;
-   
-   transition: 0.5s;
- }
- 
- .caroCarrousel > div nav a:hover,
- .caroCarrousel > div nav a:focus {
-   color: var(--caroCarrouselAccentColor);
- }
- 
- .caroCarrousel > div nav a.current {
-   background-color: currentColor;
- }
- 
- .caroCarrousel > div nav a:hover,
- .caroCarrousel > div nav a:focus {
-   color: var(--caroCarrouselAccentColor);
- }
- 
- .caroCarrousel > div nav a.current {
-   background-color: currentColor;
- }
- 
+  
 
 
 
@@ -501,83 +426,10 @@ article:nth-child(4) ul:nth-child(4) {
 
 
 
- 
- /*********************/
- /* PLAY/PAUSE BUTTON */
- /*********************/
- 
- .caroCarrousel > button {
-   position: absolute;
-   right: .5em;
-   bottom: .5em;
-   
-   width: 1.2em;
-   aspect-ratio:1/1;
-   padding:0;
-   
-   font-size:inherit;
-   appearance: none;
-   background-color: var(--caroCarrouselShadeColor);
- 
-   border: none;
-     outline: none;
-     box-shadow: inset 0 0 0 1px currentColor;
-     cursor: pointer;
-     
-   transition: 0.5s;
- 
-     display: flex;
-   justify-content: center;
-     align-items: center;
 
-     background-color: white;
-     border-top-left-radius: 1.4em; /* Left half-circle */
-     border-bottom-left-radius: 1.4em;
-     border-top-right-radius: 1.4em; /* Right half-circle */
-     border-bottom-right-radius: 1.4em;
-     border: none;
- }
- 
- .caroCarrousel > button:hover,
- .caroCarrousel > button:focus {
-   color: var(--caroCarrouselAccentColor);
- }
- 
- /* play/pause button */
- .caroCarrousel > button::before,
- .caroCarrousel > button::after {
-   content: "";
-   position: absolute;
-   width: .5em; height: 2px;
-   background-color: currentColor;
-   transform-origin: calc(100% - 1px) center;
-   transition:transform 0.5s;
- }
- 
- /* indien niet aan het auto-scrollen */
- /* de streepjes vormen een play-icoon */
- .caroCarrousel > button::before {
-     transform: translateY(0) rotate(45deg);
- }
- .caroCarrousel > button::after {
-     transform: translateY(0) rotate(-45deg);
- }
- 
- /* indien aan het auto-scrollen */
- /* de streepjes vormen een pauze-icoon */
- .caroCarrousel.autoScrolling > button::before {
-     transform: translateY(-2px);
- }
- .caroCarrousel.autoScrolling > button::after {
-     transform: translateY(2px);
- }
- 
- /* in de button draait een 'eierwekker' */
- .caroCarrousel.autoScrolling > button {
-     animation-name: carrouselAutoScrollingButton;
-   animation-duration: calc(var(--caroCarrouselAutoScrollInterval) * 1ms);
-   animation-timing-function: linear;
-   animation-iteration-count: infinite;
- }
- 
- 
+
+
+
+
+
+
